sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: not found: value inverse
        inverse(i,i+1)
        ^AlgCocktailSort1:11: error: not found: value inverse
          inverse(etNombreValeurs()-i,getNombreValeurs()-i-1)
          ^AlgCocktailSort1:11: error: not found: value etNombreValeurs
          inverse(etNombreValeurs()-i,getNombreValeurs()-i-1)
                  ^